--- a/.drone.yml
+++ b/.drone.yml
@@ -16,6 +16,6 @@ steps:
         from_secret: docker_token
     commands:
       - sleep 10 # Give Docker a second...
-      - docker login -u 178256 -p "${DOCKER_TOKEN}"
+      - echo "$DOCKER_TOKEN" | docker login -u 178256 --password-stdin
       - docker build -t 178256/slc-camp-maps:"${DRONE_TAG}"
       - docker push 178256/slc-camp-maps:"${DRONE_TAG}"
