--- a/.drone.yml
+++ b/.drone.yml
@@ -19,3 +19,15 @@ steps:
       - echo "$DOCKER_TOKEN" | docker login -u 178256 --password-stdin
       - docker build -t 178256/slc-camp-maps:"${DRONE_TAG}" .
       - docker push 178256/slc-camp-maps:"${DRONE_TAG}"
+
+services:
+- name: docker
+  image: docker:dind
+  privileged: true
+  volumes:
+  - name: dockersock
+    path: /var/run
+
+volumes:
+- name: dockersock
+  temp: {}
