--- a/.drone.yml
+++ b/.drone.yml
@@ -3,22 +3,38 @@ type: kubernetes
 name: slc-camp-maps
 
 steps:
-  - name: build and push
-    image: docker:20.10-dind
+  - name: build and push  
+    image: plugins/docker
     when:
       ref:
       - refs/tags/*.*.*
-    volumes:
-    - name: dockersock
-      path: /var/run
-    environment:
-      DOCKER_TOKEN:
+    settings:
+      repo: unfrl/slc-camp-maps
+      username: mattunfrl
+      password:
         from_secret: docker_token
-    commands:
-      - sleep 10 # Give Docker a second...
-      - echo "$DOCKER_TOKEN" | docker login -u mattunfrl --password-stdin
-      - docker build -t unfrl/slc-camp-maps:"${DRONE_TAG}" .
-      - docker push unfrl/slc-camp-maps:"${DRONE_TAG}"
+      tags:
+        - latest
+        - "${DRONE_TAG}"
+
+  # - name: build and push
+  #   image: docker:20.10-dind
+  #   when:
+  #     ref:
+  #     - refs/tags/*.*.*
+  #   volumes:
+  #   - name: dockersock
+  #     path: /var/run
+  #   environment:
+  #     DOCKER_TOKEN:
+  #       from_secret: docker_token
+  #   commands:
+  #     - sleep 10 # Give Docker a second...
+  #     - echo "$DOCKER_TOKEN" | docker login -u mattunfrl --password-stdin
+  #     - docker build -t unfrl/slc-camp-maps:"${DRONE_TAG}" .
+  #     - docker push unfrl/slc-camp-maps:"${DRONE_TAG}"
+  #     - docker tag unfrl/slc-camp-maps:"${DRONE_TAG}" unfrl/slc-camp-maps:latest
+  #     - docker push unfrl/slc-camp-maps:latest
   
   - name: deploy
     image: sinlead/drone-kubectl
@@ -38,14 +54,14 @@ steps:
       - kubectl -n slc-camp-maps set image deployment/slc-camp-maps-deployment slc-camp-maps-app=unfrl/slc-camp-maps:"${DRONE_TAG}" --record
 
 
-services:
-- name: docker
-  image: docker:dind
-  privileged: true
-  volumes:
-  - name: dockersock
-    path: /var/run
+# services:
+# - name: docker
+#   image: docker:dind
+#   privileged: true
+#   volumes:
+#   - name: dockersock
+#     path: /var/run
 
-volumes:
-- name: dockersock
-  temp: {}
+# volumes:
+# - name: dockersock
+#   temp: {}
